# byte-blaster

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  example.py  pyproject.toml  pyrightconfig.json  uv.lock.backup
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-update.yml  release.yml
docs/: IMPLEMENTATION.md  INTERLEAVED_BLOCKS.md  PYTHON_COMPATIBILITY.md  RELEASE_PROCESS.md  REPOSITORY_SETUP.md  SETUP_INSTRUCTIONS.md  TYPING.md
examples/: ASYNC_ITERATOR_USAGE.md  example.py  example_async_iterators.py  example_simple_iterator.py
scripts/: check_python_compatibility.py  release.py  validate_typing.py  verify_installation.py
src/byte_blaster/: __init__.py  client.py  file_manager.py  handler.py
src/byte_blaster/protocol/: __init__.py  auth.py  decoder.py  models.py
src/byte_blaster/server/: __init__.py  manager.py
src/byte_blaster/utils/: __init__.py
src/byteblaster/: README.md  __init__.py  client.py  file_manager.py  handler.py
src/byteblaster/protocol/: auth.py  decoder.py  models.py
src/byteblaster/utils/: manager.py
tests/: __init__.py  conftest.py  test_basic.py  test_client.py  test_connection.py  test_file_assembler.py  test_file_manager.py  test_interleaved_blocks.py  test_simple.py
tests/protocol/: test_auth.py  test_decoder.py  test_models.py
tests/utils/: __init__.py  test_crypto.py  test_serverlist.py
